--- a/app/assets/stylesheets/pages/_home.scss
+++ b/app/assets/stylesheets/pages/_home.scss
@@ -51,9 +51,9 @@ footer {
 .sos {
   background-image: linear-gradient(45deg, rgba(246, 148, 183, 1) 5%, #fa8480 69%, rgba(246, 148, 183, 1) 98%);
   color: $kikoe-white;
-  // box-shadow: 0px 1px 3px $kikoe-purple;
+  box-shadow: 0px 1px 14px rgba(0, 0, 0, 0.14);
   border-radius: 5px;
-  box-shadow: 0 8px 6px -6px $kikoe-purple;
+  // box-shadow: 0 8px 6px -6px $kikoe-purple;
 
 
 }
