--- a/app/assets/stylesheets/pages/_students_bookings.scss
+++ b/app/assets/stylesheets/pages/_students_bookings.scss
@@ -44,6 +44,18 @@
   margin: 5px;
 }
 
+.description-white {
+  font-size: 12px;
+  margin: 5px;
+  color: white;
+}
+.with-card{
+  p {
+    margin-bottom: 5px;
+    color: white;
+    text-shadow: 0 0 1px rgb(99, 123, 179);
+  }
+}
 .session-card {
   background-image: linear-gradient(45deg, #ad80fa 5%, #91b2fd 69%, #cdd0f6 98%);
   box-shadow: 0px 1px 3px rgba(0,0,0,0.3);
