--- a/app/views/users/_past_session.html.erb
+++ b/app/views/users/_past_session.html.erb
@@ -10,8 +10,7 @@
       </div>
       <div class="counselor_info col-xs-6 col-sm-6 col-lg-6 text-left">
         <% date = booking.start_time %>
-        <p><strong>Date:</strong> <%= date.year %>/<%= date.month %>/<%= date.day %> <%= date.hour %>:<%= date.min == 0 ? '00' : date.min %></p>
-        <p><strong>Mode:</strong> <%= booking.mode %></p>
+        <%= render "shared/session_card_info", booking: booking %>
       </div>
     </div>
   <% end %>
