--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -13,7 +13,7 @@
         </div>
       <% end %>
     </div>
-    <div class='sos p-4' style='margin-top: 45px;'>
+    <div class='sos p-4'>
       <h3 class='sos-text mb-3 text-center' style="color: white">Find help now</h3>
       <div class='online-counselors'>
         <p style='text-align: center'>Online counselors at your school:</p>
