fix over-written color in order to apply emojis color

--- a/app/assets/stylesheets/pages/_student_dashboard.scss
+++ b/app/assets/stylesheets/pages/_student_dashboard.scss
@@ -19,7 +19,7 @@
     vertical-align: middle;
     i {
       font-size: 25px;
-      color: #ad80fa;
+      // color: #ad80fa;
     }
     .days-purple {
       font-size: 16px;
