--- a/app/assets/stylesheets/components/_student_hp_chart.scss
+++ b/app/assets/stylesheets/components/_student_hp_chart.scss
@@ -8,7 +8,7 @@
       vertical-align: middle;
       i {
         font-size: 25px;
-        color: $kikoe-white;
+        // color: $kikoe-white;
       }
       p {
         font-size: 16px;
