--- a/app/views/pages/_weekly_individual_report.erb
+++ b/app/views/pages/_weekly_individual_report.erb
@@ -2,7 +2,7 @@
   <div class="weekly_report d-flex justify-content-center align-items-center w-100">
     <% current_user.daily_emotions.where('date >= ? AND date <= ?', (Time.now - 1.week), Time.now).order(:date).each do |report| %>
       <div class="date_set">
-        <i class="<%=fontawesome(report.emotion)%> text-white"></i>
+        <i class="<%=fontawesome(report.emotion)%>"></i>
         <p class="text-white <%= report.date == Date.today ? "font-weight-bold" : "font-weight-light" %>"><%= report.date.strftime('%a') %></p>
       </div>
     <% end %>
