--- a/app/assets/stylesheets/pages/_counselors_dashboard.scss
+++ b/app/assets/stylesheets/pages/_counselors_dashboard.scss
@@ -63,12 +63,13 @@
 }
 
 .title-sos {
-  background-image: linear-gradient(45deg, rgba(246, 148, 183, 1) 5%, #fa8480 69%, rgba(246, 148, 183, 1) 98%);;
+  // background-image: linear-gradient(45deg, rgba(246, 148, 183, 1) 5%, #fa8480 69%, rgba(246, 148, 183, 1) 98%);;
   background-clip: text;
+  color:#fa8480 ;
   background-size: 100%;
   -webkit-background-clip: text;
   -moz-background-clip: text;
-  -webkit-text-fill-color: transparent;
-  -moz-text-fill-color: transparent;
+  // -webkit-text-fill-color: transparen
+  // -moz-text-fill-color: transparent;
   font-weight: bold;
 }
