--- a/app/assets/stylesheets/pages/_students_bookings.scss
+++ b/app/assets/stylesheets/pages/_students_bookings.scss
@@ -9,13 +9,14 @@
 }
 
 .title {
-  background-image: linear-gradient(45deg, #ad80fa 5%, #91b2fd 69%, #cdd0f6 98%);
+  color: #ad80fa;
+  // background-image: linear-gradient(45deg, #ad80fa 5%, #91b2fd 69%, #cdd0f6 98%);
   background-clip: text;
   background-size: 100%;
   -webkit-background-clip: text;
   -moz-background-clip: text;
-  -webkit-text-fill-color: transparent;
-  -moz-text-fill-color: transparent;
+  // -webkit-text-fill-color: transparent;
+  // -moz-text-fill-color: transparent;
   font-weight: bold;
   display: list-item;
 }
