--- a/app/assets/stylesheets/components/_chatroom.scss
+++ b/app/assets/stylesheets/components/_chatroom.scss
@@ -9,7 +9,6 @@
   min-height: 4rem;
   background-color: #ad80fa;
   background-image: linear-gradient(45deg, #ad80fa 5%, #91b2fd 69%, #cdd0f6 98%);
-  position:sticky;
   top: 0;
   display: flex;
   align-items: center;
@@ -23,6 +22,11 @@
 .page-frame-body {
   flex-grow: 1;
   overflow: scroll;
+}
+
+.flex-direction-reverse {
+  display: flex;
+  align-items: flex-end;
 }
 
 .page-frame-footer {
