--- a/app/views/bookings/_chatroom.html.erb
+++ b/app/views/bookings/_chatroom.html.erb
@@ -1,21 +1,21 @@
-<div class="page-frame-content">
-  <div class="top-head">
-    <div class="d-flex align-items-center">
-      <%= current_user.nil? ? cl_image_tag(@user.photo.key, height: 40, width: 40, radius: 'max', style: 'border-radius: 50%; margin-left: 15px') : cl_image_tag(@counselor.photo.key, height: 40, width: 40, radius: 'max', style: 'border-radius: 50%; margin-left: 15px') %>
-      <p class='ml-2' style="margin-bottom: 0; color: rgba(249, 250, 253, 1)"><%= current_user.nil? ? @user.first_name : @counselor.first_name %></p>
-    </div>
-    <%# Hiding end session button for the counselor %>
-    <% if current_counselor.nil? %>
-      <%= simple_form_for @booking do |f|  %>
-        <%= f.hidden_field :in_session, value: false, as: :boolean %>
-        <div class="top-head-button">
-          <%= f.button :submit, 'End Session', class: 'btn btn-sm btn-primary mx-3', style: 'color: rgba(249, 250, 253, 1); box-shadow: 0 1px 3px rgba(0, 0, 0, 0.2)' %>
-        </div>
-      <% end %>
-    <% end %>
+<div class="top-head">
+  <div class="d-flex align-items-center">
+    <%= current_user.nil? ? cl_image_tag(@user.photo.key, height: 40, width: 40, radius: 'max', style: 'border-radius: 50%; margin-left: 15px') : cl_image_tag(@counselor.photo.key, height: 40, width: 40, radius: 'max', style: 'border-radius: 50%; margin-left: 15px') %>
+    <p class='ml-2' style="margin-bottom: 0; color: rgba(249, 250, 253, 1)"><%= current_user.nil? ? @user.first_name : @counselor.first_name %></p>
   </div>
+  <%# Hiding end session button for the counselor %>
+  <% if current_counselor.nil? %>
+    <%= simple_form_for @booking do |f|  %>
+      <%= f.hidden_field :in_session, value: false, as: :boolean %>
+      <div class="top-head-button">
+        <%= f.button :submit, 'End Session', class: 'btn btn-sm btn-primary mx-3', style: 'color: rgba(249, 250, 253, 1); box-shadow: 0 1px 3px rgba(0, 0, 0, 0.2)' %>
+      </div>
+    <% end %>
+  <% end %>
+</div>
+<div class="page-frame-content">
   <%# Message body %>
-  <div class="page-frame-body col-md-8 mx-auto">
+  <div class="page-frame-body flex-direction-reverse col-md-8 mx-auto">
     <%# messagesContainer %>
     <div id="messages" data-booking-id="<%= @booking.id %>" data-user-id="<%=current_counselor&.id || current_user&.id%>">
       <div class="text-center my-2">
