--- a/app/assets/stylesheets/pages/_booking_new.scss
+++ b/app/assets/stylesheets/pages/_booking_new.scss
@@ -96,11 +96,12 @@
   .category-counselor-img {
     object-fit: cover;
     border-radius: 50%;
+    opacity: 0.7 !important;
   }
 
   .category-counselor-img.selected {
     transition: .5s;
-    box-shadow: 0 0 16px rgba(0,0,0,1);
+    // box-shadow: 0 0 16px rgba(0,0,0,1);
   }
 
   .col-form-label {
@@ -109,10 +110,14 @@
   }
   .category-selector:checked + label {
     color: $kikoe-pink !important;
-    opacity: 0.7 !important;
-    box-shadow:
-    inset 0 -3em 3em rgba(185, 7, 7, 0.1),
-    0 0  0 2px $kikoe-blue,
+    // opacity: 0.7 !important;
+    // box-shadow:
+    // inset 0 -3em 3em rgba(185, 7, 7, 0.1),
+    // 0 0  0 2px $kikoe-blue,
+    img {
+      opacity: 1 !important;
+      box-shadow: 0 0 20px rgba(246, 148, 183, 1);
+    }
   }
   .new-submit-btn{
     transition-duration: 0.4s;
