--- a/app/views/pages/_emotions_home.erb
+++ b/app/views/pages/_emotions_home.erb
@@ -35,3 +35,6 @@
     <% end %>
   </div>
 </div>
+  <div class="d-flex justify-content-center" style="position: relative;top: 31px;">
+  <p style="margin-bottom: 0;">Position Hello</p>
+  </div>
