--- a/app/views/pages/_emotions_home.erb
+++ b/app/views/pages/_emotions_home.erb
@@ -36,5 +36,5 @@
   </div>
 </div>
   <div class="d-flex justify-content-center" style="position: relative;top: 31px;">
-  <p style="margin-bottom: 0;">Position Hello</p>
+  <p style="margin-bottom: 1px;">Position Hello</p>
   </div>
