changed Daily report padding
Made it a little smaller

--- a/app/views/pages/_emotions_home.erb
+++ b/app/views/pages/_emotions_home.erb
@@ -35,6 +35,6 @@
     <% end %>
   </div>
 </div>
-  <div class="d-flex justify-content-center" style="position: relative;top: 31px;">
+  <div class="d-flex justify-content-center">
   <p class="motivational"><%= render 'motivational_quotes' %></p>
   </div>
