changed padding again, made it alittle smalled
styled quotes section

--- a/app/assets/stylesheets/components/_motivational_quotes.scss
+++ b/app/assets/stylesheets/components/_motivational_quotes.scss
@@ -1,7 +1,12 @@
 .motivational {
-  font-size: 12px;
+  font-size: 10px;
   position: relative;
   top: 30px;
   padding: 0;
-  margin: 0;
+  margin-right: 20px;
+  margin-left: 20px;
+  margin-bottom: 0;
+  word-wrap: normal;
+  width: 100%;
+  text-align: center;
 }
