made padding big enough so there is no white under pink 'help now' EVER!

--- a/app/views/pages/_emotions_home.erb
+++ b/app/views/pages/_emotions_home.erb
@@ -36,5 +36,5 @@
   </div>
 </div>
   <div class="d-flex justify-content-center">
-  <p class="motivational"><%= render 'motivational_quotes' %></p>
+  <p class="motivational"><i><%= render 'motivational_quotes' %></i></p>
   </div>
