--- a/app/assets/stylesheets/pages/_login.scss
+++ b/app/assets/stylesheets/pages/_login.scss
@@ -3,7 +3,7 @@
   font-weight: lighter;
   height: 100vh;
   color: white;
-  background: linear-gradient(180deg, rrgba(246, 148, 183, 1) 0%, rgba(255,155,245,0.888874299719888) 6%, rgba(255,255,255,1) 100%);
+  background: linear-gradient(180deg, rgba(246, 148, 183, 0.8) 0%, rgba(173, 128, 250, 0.6) 6%, rgba(255,255,255,1) 100%);
 
 }
 
